--- a/index.css
+++ b/index.css
@@ -29,3 +29,27 @@
 .nav-items > ul > li {
     padding: 5px 10px;
 }
+.res-container {
+    display: flex;
+    flex-wrap:wrap;
+    justify-content:center;
+}
+.res-card {
+    margin: 5px 10px;
+    padding: 5px 8px;
+    width: 250px;
+    height: 310px;
+    background-color: #FAEF5D;
+}
+.res-card:hover {
+    border: 2px solid black;
+    cursor: pointer;
+}
+.res-card > img {
+    width: 100%;
+    
+}
+
+.search {
+    padding: 13px 15px;
+}
